@@ -4,8 +4,8 @@
     echo "<table class='table table-striped table-bordered'>";
     echo "<thead>";
     echo "";
-    echo "<tr><th rowspan=2>Type</th><th rowspan=2>Category</th><th rowspan=2>File</th><th colspan=4>Security</th><th rowspan=2>View / Edit</th></tr>";
-    echo "<tr><th>Visible</th><th>Month</th><th>Day</th><th>Year</th></tr>";
+    echo "<tr><th rowspan=2>Type</th><th rowspan=2>Category</th><th rowspan=2>File</th><th colspan=5>Security</th><th rowspan=2>View / Edit</th></tr>";
+    echo "<tr><th>Visible</th><th>Month</th><th>Day</th><th>Year</th><th>Dynamic</th></tr>";
     echo "</thead>";
     echo "<tbody>";
     foreach ($other as $fn => $value) {
@@ -23,6 +23,7 @@
       echo "<td>".$value['month']."</td>";
       echo "<td>".$value['day']."</td>";
       echo "<td>".$value['year']."</td>";
+      echo "<td>".$value['dynamic']."</td>";
       $link .='&edit=1';
       echo "<td><a href='$link'>view</a></td>";
       echo "</tr>";
